# noor-ai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agent/: agent.py
app/agent/utils/: nodes.py  state.py  workflows.py
app/api/v1/endpoints/: chat.py
app/core/: config.py
app/core/schemas/: agent.py  chat.py
app/db/: vectordb.py
scripts/: ingest.py  ingest_debug.py
